Revision history for Perl extension Geo::WeatherNWS.

1.05
    - Changes to deal with undefined values used for calculations to avoid warnings.
      To make it easier to check for undefined values, some calculations were moved
      into functions.

1.041 Wed Nov 14 22:00:00 2012
    - Minor changes: removed unneeded /d after tr,
      made network tests optional,
      check status of opens.

1.04  Wed Aug 10 10:00:00 2011
    - Changed default ftp server name to tgftp.nws.noaa.gov,
      added ftp timeout,
      did some restructuring, 
      added tests and some documentation

1.03  Sun Feb 9 13:52:00 2003
	- added the getreporthttp call to get the metar data from the nws 
	  website at http://weather.noaa.gov/cgi-bin/mgetmetar.pl

1.02  Sun Feb 9 12:45:00 2003
	- changed ftp connection to passive to work behind firewalls
	- added automated station code provided by Jim Metzger

1.01  Thu Aug 08 13:07:00 2002
	- updated version number and docs
	- fixed "isn't numeric" error in remarks processing

0.23  Fri Aug 02 10:28:00 2002
	- fixed some documentation errors
	- added new wind chill calculation formula

0.22  Thu May 16 16:14:00 2002
	- fixed temperature reading /pressure reading errors

0.21  Mon Feb 25 08:50:00 2002
        - added support for mb encoded pressures (Q[XXXX])
        - added decodeobs function to decode metar obs from a string

0.20  Sun Feb 24 11:33:00 2002
        - added support for template files

0.19  Sun Feb 24 10:25:00 2002
        - added support for error codes
        - added support for changing the server/user/directory settings

0.18  Wed Jan 23 21:26:08 2002
	- added support for fractional visibility readings
	- fixed "uninitialized value" bugs

0.17  Tue Dec 18 11:46:52 2001
	- original version; created by h2xs 1.20 with options
		-XA -n Geo::WeatherNWS
