@@ -36,8 +36,8 @@ is( $decode1->{station_type},  'Manual', 'decoded station type' );
 is( $decode1->{temperature_c}, 27,       'decoded temperature Celius' );
 is( $decode1->{temperature_f}, 80,       'decoded temperature Fahrenheit' );
 is( $decode1->{time},          '1200',   'decoded time' );
-is( $decode1->{windchill_c},   29,       'decoded windchill Celius' );
-is( $decode1->{windchill_f},   85,       'decoded windchill Fahrenheit' );
+is( $decode1->{windchill_c},   undef,       'decoded windchill Celius' );
+is( $decode1->{windchill_f},   undef,       'decoded windchill Fahrenheit' );
 is( $decode1->{winddirtext},   'Calm',   'decoded wind direction' );
 is( $decode1->{winddir},       0,        'decoded wind dir' );
 is( $decode1->{windgustkts},   0,        'decoded wind gust knots' );
@@ -91,8 +91,8 @@ is( $decode2->{station_type},       'Automated', 'decoded station type' );
 is( $decode2->{temperature_c},      24,          'decoded temperature Celius' );
 is( $decode2->{temperature_f}, 75,      'decoded temperature Fahrenheit' );
 is( $decode2->{time},          '1451',  'decoded time' );
-is( $decode2->{windchill_c},   25,      'decoded windchill Celius' );
-is( $decode2->{windchill_f},   77,      'decoded windchill Fahrenheit' );
+is( $decode2->{windchill_c},   undef,      'decoded windchill Celius' );
+is( $decode2->{windchill_f},   undef,      'decoded windchill Fahrenheit' );
 is( $decode2->{winddirtext},   'North', 'decoded wind direction' );
 is( $decode2->{winddir},       20,      'decoded wind dir' );
 is( $decode2->{windgustkts},   0,       'decoded wind gust knots' );
