@@ -4,6 +4,10 @@ Revision history for Perl extension Geo::WeatherNWS.
     - Changes to deal with undefined values used for calculations to avoid warnings.
       To make it easier to check for undefined values, some calculations were moved
       into functions.
+    - Windchill is now returned as undefined for temperatures above 50 F or
+      wind speeds below 4 mph.
+    - The knots to mph conversion is slightly different.
+    - We now round results instead of truncating them to integers.
 
 1.041 Wed Nov 14 22:00:00 2012
     - Minor changes: removed unneeded /d after tr,
